--- a/rs/log-fetcher/Cargo.toml
+++ b/rs/log-fetcher/Cargo.toml
@@ -16,6 +16,7 @@ url = { workspace = true }
 log = { workspace = true }
 pretty_env_logger = { workspace = true }
 tokio = { workspace = true }
+tokio-util = { workspace = true }
 anyhow = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
