--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -14,9 +14,9 @@ crate-type = ["cdylib"]
 async-trait = { workspace = true }
 chrono = { version = "0.4.41", default-features = false, features = [] }
 ic-canisters-http-types = { workspace = true }
-ic-cdk = { workspace = true }
-ic-cdk-timers = { workspace = true }
-ic-cdk-macros = { workspace = true }
+ic-cdk = { version = "0.18.0" }
+ic-cdk-timers = { version = "0.12.0" }
+ic-cdk-macros = { version = "0.18.0" }
 ic-stable-structures = { workspace = true }
 candid = { workspace = true }
 serde = { workspace = true }
@@ -29,6 +29,8 @@ ic-management-canister-types-private = { workspace = true }
 ic-metrics-encoder = { workspace = true }
 ic-nervous-system-canisters = { workspace = true }
 ic-nervous-system-common = { workspace = true }
+ic-nns-constants = { workspace = true }
+ic-registry-transport = { workspace = true }
 ic-protobuf = { workspace = true }
 ic-registry-canister-client = { workspace = true }
 ic-types = { workspace = true }
