--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -7,6 +7,9 @@ description.workspace = true
 documentation.workspace = true
 license.workspace = true
 
+[features]
+instant-sync = []
+
 [lib]
 crate-type = ["cdylib"]
 
