--- a/facts-db/BUILD.bazel
+++ b/facts-db/BUILD.bazel
@@ -1,5 +1,5 @@
 filegroup(
-    name = "non_public_subnets",
-    srcs = [ "non_public_subnets.csv" ],
+    name = "non_default_subnets",
+    srcs = [ "non_default_subnets.csv" ],
     visibility = [ "//visibility:public" ],
 )
