--- a/rs/cli/BUILD.bazel
+++ b/rs/cli/BUILD.bazel
@@ -19,9 +19,9 @@ cargo_build_script(
         build = True
     ),
     build_script_env = {
-        "NON_PUBLIC_SUBNETS": "$(execpath //facts-db:non_public_subnets)"
+        "NON_DEFAULT_SUBNETS": "$(execpath //facts-db:non_default_subnets)"
     },
-    data = [ "//facts-db:non_public_subnets" ]
+    data = [ "//facts-db:non_default_subnets" ]
 )
 
 rust_binary(
