--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -2,3 +2,4 @@
 # which are used while managing subnets.
 # The full list of features can be found here:
 # https://github.com/dfinity/dre/blob/main/rs/ic-management-types/src/lib.rs#L317-L324
+features:
