--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,5 +1,9 @@
 releases:
   # NOTE: Make sure to mark security hotfixes with the `security_fix: true` flag.
+  - rc_name: rc--2025-05-23_03-21
+    versions:
+      - name: base
+        version: 16825c5cbff83a51983d849b60c9d26b3268bbb6
   - rc_name: rc--2025-05-15_03-20
     versions:
       - name: base
