--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,48 +97,47 @@ self_update = { version = "0.41.0", default-features = false, features = [
     "archive-tar",
     "rustls",
 ] }
-ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
 ic-canisters = { path = "rs/ic-canisters" }
-ic-canisters-http-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-config = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-config = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
 ic-management-backend = { path = "rs/ic-management-backend" }
-ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
 ic-management-types = { path = "rs/ic-management-types" }
-ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-types = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
 ic-metrics-encoder = "1.1.1"
 ic-transport-types = "0.39.3"
 ic-utils = "0.39.3"
@@ -164,7 +163,7 @@ prost = "0.13"
 rand = { version = "0.9.0", features = ["std_rng"] }
 rand_seeder = "0.3.0"
 regex = "1.11.1"
-registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
 reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls-webpki-roots",
     "blocking",
@@ -179,7 +178,7 @@ serde_json = { version = "1.0.140", default-features = false, features = [
 ] }
 serde_yaml = "0.9.34"
 shlex = "1.3.0"
-sha2 = "0.10.8"
+sha2 = "0.10.9"
 simple_asn1 = "0.6.3"
 slog-async = { version = "2.8.0", features = ["nested-values"] }
 slog-term = "2.9.1"
@@ -204,11 +203,12 @@ human_bytes = "0.4"
 mockall = "0.13.1"
 
 # dre-canisters dependencies
-ic-cdk = { version = "0.18.0" }
+ic-cdk = { version = "0.17.2" }
 ic-cdk-timers = { version = "0.12.0" }
-ic-cdk-macros = { version = "0.18.0" }
+ic-cdk-macros = { version = "0.17.2" }
 ic-stable-structures = "0.6.8"
-dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
+ic-http-types = { git = "https://github.com/dfinity/ic.git", rev = "16825c5cbff83a51983d849b60c9d26b3268bbb6" }
 rewards-calculation = { path = "rs/dre-canisters/node-provider-rewards/rewards-calculation" }
 node-provider-rewards-api = { path = "rs/dre-canisters/node-provider-rewards/canister/api" }
 
