--- a/release-index.yaml
+++ b/release-index.yaml
@@ -10,7 +10,8 @@
 releases:
   - rc_name: rc--2025-06-12_03-23
     versions:
-      - name: base
+      - # Release qualification pipeline: https://github.com/dfinity/ic/actions/runs/15600837563
+        name: base
         version: 3564b37939f037ba4d051ada88251c13954597d2
   - rc_name: rc--2025-06-05_03-24
     versions:
