chore: cordon node_provider until UBO audit

--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -9,3 +9,6 @@ features:
   - feature: node_provider
     value: spp3m-vawt7-3gyh6-pjz5d-6zidf-up3qb-yte62-otexv-vfpqg-n6awf-lqe
     explanation: "Rivonia is selling its nodes as announced in the forum: https://forum.dfinity.org/t/new-node-provider-proposals/16643/1047"
+  - feature: node_provider
+    value: dnpkk-x67ir-zwcyz-fkgzz-547t7-papxf-zby5t-i2log-uodsf-pcizd-jae
+    explanation: "Cordoning until the UBO audit is completed. https://dfinity.slack.com/archives/C02BEQD3410/p1750167518659589"
