Update dependencies and refactor code
- Updated the git revision for IcAdmin in ic_admin.py.
- Changed the dependency from `ic-canisters-http-types` to `ic-http-types` in Cargo.toml for node-provider-rewards canister.
- Updated the chrono version from 0.4.38 to 0.4.41 in multiple Cargo.toml files.
- Refactored imports in metrics.rs to use the correct CallResult type.
- Updated the Cargo.toml for rewards-calculation to use chrono version 0.4.41.
- Changed the import path for MonthlyNodeProviderRewards in types.rs.
- Removed the node-status-updater canister and its associated files.
- Updated the Rust toolchain version from 1.84.0 to 1.86.0.
- Refactored the is_text_file function in auto-update-revisions.py to simplify text file detection based on file extensions.

--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib"]
 [dependencies]
 async-trait = { workspace = true }
 chrono = { version = "0.4.41", default-features = false, features = [] }
-ic-canisters-http-types = { workspace = true }
+ic-http-types = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-timers = { workspace = true }
 ic-cdk-macros = { workspace = true }
