--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ members = [
     "rs/ic-observability/multiservice-discovery",
     "rs/ic-observability/multiservice-discovery-downloader",
     "rs/ic-observability/multiservice-discovery-shared",
-    "rs/ic-observability/node-status-updater",
     "rs/ic-observability/obs-canister-clients",
     "rs/ic-observability/prometheus-config-updater",
     "rs/ic-observability/service-discovery",
@@ -37,21 +36,21 @@ documentation = "https://github.com/dfinity/dre/"
 license = "Apache-2.0"
 
 [workspace.dependencies]
-actix-web = { version = "4.10.2", default-features = false, features = [
+actix-web = { version = "4.11.0", default-features = false, features = [
     "compress-gzip",
     "macros",
 ] }
 actix-rt = "2.10.0"
-ahash = "0.8.11"
+ahash = "0.8.12"
 anyhow = "1.0.98"
 async-recursion = "1.1.1"
 async-trait = "0.1.88"
 axum-otel-metrics = "0.10.0"
-axum = "0.8.1"
+axum = "0.8.4"
 backoff = { version = "0.4.0", features = ["tokio"] }
-backon = "1.5.0"
-candid = "0.10.13"
-chrono = { version = "0.4.40", features = ["serde"] }
+backon = "1.5.1"
+candid = "0.10.14"
+chrono = { version = "0.4.41", features = ["serde"] }
 clap-num = "1.2"
 clap = { version = "4.5", features = [
     "derive",
@@ -65,10 +64,10 @@ clap = { version = "4.5", features = [
     "string",
     "cargo",
 ] }
-clap_complete = "4.5.47"
+clap_complete = "4.5.54"
 colored = "2.2.0"
 comfy-table = "7.1.4"
-assert_cmd = "2.0.16"
+assert_cmd = "2.0.17"
 crossbeam = "0.8.4"
 crossbeam-channel = "0.5.15"
 cryptoki = "0.7.0"
@@ -82,8 +81,8 @@ base64 = "0.22.1"
 edit = "0.1.5"
 env_logger = "0.11.8"
 erased-serde = "0.4.6"
-flate2 = "1.1.1"
-fs-err = "3.1.0"
+flate2 = "1.1.2"
+fs-err = "3.1.1"
 fs2 = "0.4.3"
 function_name = "0.3"
 futures = "0.3.31"
@@ -97,48 +96,48 @@ self_update = { version = "0.41.0", default-features = false, features = [
     "archive-tar",
     "rustls",
 ] }
-ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
 ic-canisters = { path = "rs/ic-canisters" }
-ic-canisters-http-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-config = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-http-types = { version = "0.1.0" }
+ic-config = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
 ic-management-backend = { path = "rs/ic-management-backend" }
-ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
 ic-management-types = { path = "rs/ic-management-types" }
-ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-types = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
+icrc-ledger-types = { version = "0.1.9" }
 ic-metrics-encoder = "1.1.1"
 ic-transport-types = "0.39.3"
 ic-utils = "0.39.3"
@@ -161,17 +160,17 @@ prometheus-http-query = { version = "0.8.3", default-features = false, features 
 ] }
 prometheus = { version = "0.13.4", features = ["process"] }
 prost = "0.13"
-rand = { version = "0.9.0", features = ["std_rng"] }
+rand = { version = "0.9.1", features = ["std_rng"] }
 rand_seeder = "0.3.0"
 regex = "1.11.1"
-registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
 reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls-webpki-roots",
     "blocking",
 ] }
 retry = "2.1.0"
 rstest = { version = "0.23.0", default-features = false }
-rust_decimal = "1.37.1"
+rust_decimal = "1.37.2"
 rust_decimal_macros = "1.37.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.140", default-features = false, features = [
@@ -179,7 +178,7 @@ serde_json = { version = "1.0.140", default-features = false, features = [
 ] }
 serde_yaml = "0.9.34"
 shlex = "1.3.0"
-sha2 = "0.10.8"
+sha2 = "0.10.9"
 simple_asn1 = "0.6.3"
 slog-async = { version = "2.8.0", features = ["nested-values"] }
 slog-term = "2.9.1"
@@ -194,21 +193,21 @@ strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
 tabled = "0.18.0"
 tabular = "0.2"
-tempfile = "3.19.1"
+tempfile = "3.20.0"
 thiserror = "2.0.12"
-tokio = { version = "1.44.2", features = ["full"] }
-tokio-util = "0.7.14"
+tokio = { version = "1.45.1", features = ["full"] }
+tokio-util = "0.7.15"
 url = "2.5.4"
 wiremock = "0.6.3"
 human_bytes = "0.4"
 mockall = "0.13.1"
 
 # dre-canisters dependencies
-ic-cdk = { version = "0.18.0" }
-ic-cdk-timers = { version = "0.12.0" }
-ic-cdk-macros = { version = "0.18.0" }
-ic-stable-structures = "0.6.8"
-dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-cdk = { version = "^0.17.2" }
+ic-cdk-timers = { version = "^0.11.0" }
+ic-cdk-macros = { version = "^0.17.2" }
+ic-stable-structures = "0.6.9"
+dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "317aacf3f9fed00c1ff8fddb3def43259f1d83a7" }
 rewards-calculation = { path = "rs/dre-canisters/node-provider-rewards/rewards-calculation" }
 node-provider-rewards-api = { path = "rs/dre-canisters/node-provider-rewards/canister/api" }
 
