--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
 # Make sure docker/Dockerfile has the same Rust toolchain version
-channel = "1.84.0"
+channel = "1.86.0"
 profile = "default"
-components = ["rls"]
+components = ["rls", "rust-analyzer"]
