--- a/release-index.yaml
+++ b/release-index.yaml
@@ -8,6 +8,11 @@
 #         rc_name: <reference RC name>
 #         name: <version name>
 releases:
+  - rc_name: rc--2025-06-19_03-24
+    versions:
+      - # Release qualification pipeline: https://github.com/dfinity/ic/actions/runs/15748637763
+        name: base
+        version: 035f978fb5cffaef57f73242e1bb2a56423e84c3
   - rc_name: rc--2025-06-12_03-23
     versions:
       - # Release qualification pipeline: https://github.com/dfinity/ic/actions/runs/15600837563
