--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -15,3 +15,6 @@ features:
   - feature: node_provider
     value: qsdw4-ao5ye-6rtq4-y3zhm-icjbj-lutd2-sbejz-4ajqz-pcflr-xrhsg-jae
     explanation: "Carbon12 is selling its nodes to DEF: https://forum.dfinity.org/t/def-acquiring-nodes-from-carbon12/47236/2"
+  - feature: node_provider
+    value: glrjs-2dbzh-owbdd-fpp5e-eweoz-nsuto-e3jmk-tl42c-wem4f-qfpfa-qqe
+    explanation: "Cordone Zarety LLC due to the IPv6 issues: https://forum.dfinity.org/t/subnet-management-tdb26-nns/33663/93"
