--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -29,6 +29,7 @@ ic-management-canister-types-private = { workspace = true }
 ic-metrics-encoder = { workspace = true }
 ic-nervous-system-canisters = { workspace = true }
 ic-nervous-system-common = { workspace = true }
+ic-nervous-system-runtime = { workspace = true }
 ic-nns-constants = { workspace = true }
 ic-registry-transport = { workspace = true }
 ic-protobuf = { workspace = true }
