--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib"]
 [dependencies]
 async-trait = { workspace = true }
 chrono = { version = "0.4.41", default-features = false, features = [] }
-ic-canisters-http-types = { workspace = true }
+ic-http-types = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-timers = { workspace = true }
 ic-cdk-macros = { workspace = true }
@@ -29,6 +29,7 @@ ic-management-canister-types-private = { workspace = true }
 ic-metrics-encoder = { workspace = true }
 ic-nervous-system-canisters = { workspace = true }
 ic-nervous-system-common = { workspace = true }
+ic-nervous-system-runtime = { workspace = true }
 ic-nns-constants = { workspace = true }
 ic-registry-transport = { workspace = true }
 ic-protobuf = { workspace = true }
