feat: Update rewardable nodes logic to fetch rewardable nodes between two utc days

--- a/rs/dre-canisters/node-provider-rewards/canister/BUILD.bazel
+++ b/rs/dre-canisters/node-provider-rewards/canister/BUILD.bazel
@@ -17,6 +17,7 @@ MACRO_DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "@crate_index_dre//:tokio",
+    "@crate_index_dre//:prost",
 ]
 
 ALIASES = {}
