--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -25,6 +25,7 @@ ic-registry-keys = { workspace = true }
 futures = { workspace = true }
 indexmap = { workspace = true }
 ic-base-types = { workspace = true }
+ic-dummy-getrandom-for-wasm = { workspace = true }
 ic-management-canister-types-private = { workspace = true }
 ic-metrics-encoder = { workspace = true }
 ic-nervous-system-canisters = { workspace = true }
@@ -43,3 +44,4 @@ serde_cbor = "0.11.2"
 
 [dev-dependencies]
 tokio = { workspace = true }
+prost = "0.13.5"
