--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -77,12 +77,15 @@ jobs:
         shell: bash
         run: |
           rustup target add x86_64-apple-darwin
+          rustup target add aarch64-apple-darwin
           CARGO_BAZEL_REPIN=true bazel build --config=ci //rs/cli:dre
-          cargo drecross
+          cargo cross-x86
+          cargo cross-aarch
 
           mkdir -p release/artifacts
           cp --dereference bazel-out/k8-opt/bin/rs/cli/dre release/artifacts/dre-x86_64-unknown-linux
           cp target/x86_64-apple-darwin/release/dre release/artifacts/dre-x86_64-apple-darwin
+          cp target/aarch64-apple-darwin/release/dre release/artifacts/dre-aarch64-apple-darwin
 
           git cliff --current --sort newest > release/CHANGELOG.md
 
