--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=mold"]
 
 [alias]
 cross-x86 = "zigbuild --bin dre --release --target x86_64-apple-darwin"
