Add new scripts for reward comparison and node failure rate analysis; update Cargo.toml and Cargo.lock for new dependencies

--- a/rs/dre-canisters/Cargo.toml
+++ b/rs/dre-canisters/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "node-provider-rewards-staging/canister",
     "node-provider-rewards/canister",
     "node-provider-rewards/canister/api",
     "node-provider-rewards/rewards-calculation-deprecated",
