--- a/rs/dre-canisters/node-provider-rewards/canister/api/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/api/Cargo.toml
@@ -12,6 +12,8 @@ ic-base-types = { workspace = true }
 rust_decimal = { workspace = true }
 rewards-calculation-deprecated = { workspace = true }
 rewards-calculation = { workspace = true }
+ic-node-rewards-canister-protobuf = { workspace = true }
+ic-nervous-system-proto = { workspace = true }
 candid = { workspace = true }
 serde = { workspace = true }
 chrono = { version = "0.4.41", default-features = false, features = [
